# doctrine-corpus

./: .gitignore  .zenodo.json  CHANGELOG.md  CITATION.cff  CLAUDE.md  README.ja.md  README.md  codemeta.json  graph.jsonld  llms-full.txt  llms.txt  pyproject.toml
.claude/agents/: judgment-pair-reviewer.md
corpus/: README.md
corpus/v0.1.0/: manifest.json  pilot.jsonl  train.jsonl  valid.jsonl
docs/CODEMAPS/: architecture.md
docs/adr/: 0001-corpus-as-primary-artifact.md  0002-judgment-vs-completion-format.md  0003-bilingual-pair-policy.md  0004-rubric-based-semantic-judgment-validation.md  0005-stage-d-verification-lora-result.md  README.md
docs/empirical/: README.md
eval/: eval_compare.py  prompt_bank.yaml
scripts/: LICENSE  build_dataset.py  extract_adrs.py  extract_glossary.py  extract_thesis.py  extract_zenn.py  line_templates.yaml  prepare_judgment_prompts.py  train.sh  validate_judgment.py
tests/: test_prepare_judgment_prompts.py
