[project]
name = "doctrine-corpus"
version = "0.1.0"
description = "Judgment-eliciting Q&A corpus across the shimo4228 research program. Operational form of Authorship Strategy Layer 4 tactic 7 (LLM-first ingest)."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [{ name = "Tatsuya Shimomoto" }]
keywords = [
    "llm-training-data",
    "instruction-tuning",
    "authorship-strategy",
    "agent-knowledge-cycle",
    "contemplative-agent",
    "doi-registered-dataset",
]

dependencies = [
    "pyyaml>=6.0",
]

[project.optional-dependencies]
extract = [
    # LLM call for judgment Q&A generation (Stage C)
    "anthropic>=0.40.0",
    "openai>=1.50.0",
]
train = [
    # mlx-lm for Apple Silicon LoRA verification (Stage D)
    "mlx-lm>=0.31.0",
]

[project.urls]
Homepage = "https://github.com/shimo4228/doctrine-corpus"
Repository = "https://github.com/shimo4228/doctrine-corpus"
ParentLine = "https://github.com/shimo4228/authorship-strategy"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["scripts"]
