[project]
name = "doctrine-corpus"
version = "0.1.0"
description = "Judgment-eliciting Q&A corpus across the shimo4228 research program. Operational form of Authorship Strategy Layer 4 tactic 7 (LLM-first ingest)."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [{ name = "Tatsuya Shimomoto" }]
keywords = [
    "llm-training-data",
    "instruction-tuning",
    "authorship-strategy",
    "agent-knowledge-cycle",
    "contemplative-agent",
    "doi-registered-dataset",
]

dependencies = [
    "pyyaml>=6.0",
]

[project.optional-dependencies]
# Stage C judgment Q&A is generated inside the Claude Code session that
# runs `scripts/prepare_judgment_prompts.py` — no Anthropic / OpenAI SDK
# dependency is required. Earlier drafts of pyproject.toml listed an
# `extract = [anthropic, openai]` group; it was removed when Stage C
# pivoted away from API-mediated generation.
train = [
    # mlx-lm for Apple Silicon LoRA verification (Stage D)
    "mlx-lm>=0.31.0",
]
dev = [
    "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["--strict-markers"]

[project.urls]
Homepage = "https://github.com/shimo4228/doctrine-corpus"
Repository = "https://github.com/shimo4228/doctrine-corpus"
ParentLine = "https://github.com/shimo4228/authorship-strategy"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["scripts"]
